# PDFRenamer

./: .gitignore  CMakeLists.txt  mingw-toolchain.cmake
.github/workflows/: build-windows.yml
Runtime/QtHost/5.15.2/gcc_64/lib/: Qt5RepParser.la  Qt5UiPlugin.la  libQt53DAnimation.la  libQt53DCore.la  libQt53DExtras.la  libQt53DInput.la  libQt53DLogic.la  libQt53DQuick.la  libQt53DQuickAnimation.la  libQt53DQuickExtras.la  libQt53DQuickInput.la  libQt53DQuickRender.la  libQt53DQuickScene2D.la  libQt53DRender.la  libQt5AccessibilitySupport.la  libQt5Bluetooth.la  libQt5Bootstrap.la  libQt5Concurrent.la  libQt5Core.la  libQt5DBus.la  libQt5Designer.la  libQt5DesignerComponents.la  libQt5DeviceDiscoverySupport.la  libQt5EdidSupport.la  libQt5EglFSDeviceIntegration.la  libQt5EglFsKmsSupport.la  libQt5EglSupport.la  libQt5EventDispatcherSupport.la  libQt5FbSupport.la  libQt5FontDatabaseSupport.la  libQt5Gamepad.la  libQt5GlxSupport.la  libQt5Gui.la  libQt5Help.la  libQt5InputSupport.la  libQt5KmsSupport.la  libQt5LinuxAccessibilitySupport.la  libQt5Location.la  libQt5Multimedia.la  libQt5MultimediaGstTools.la  (+46 more)
Runtime/QtHost/5.15.2/gcc_64/lib/pkgconfig/: Qt53DAnimation.pc  Qt53DCore.pc  Qt53DExtras.pc  Qt53DInput.pc  Qt53DLogic.pc  Qt53DQuick.pc  Qt53DQuickAnimation.pc  Qt53DQuickExtras.pc  Qt53DQuickInput.pc  Qt53DQuickRender.pc  Qt53DQuickScene2D.pc  Qt53DRender.pc  Qt5Bluetooth.pc  Qt5Concurrent.pc  Qt5Core.pc  Qt5DBus.pc  Qt5Designer.pc  Qt5Gamepad.pc  Qt5Gui.pc  Qt5Help.pc  Qt5Location.pc  Qt5Multimedia.pc  Qt5MultimediaWidgets.pc  Qt5Network.pc  Qt5Nfc.pc  Qt5OpenGL.pc  Qt5OpenGLExtensions.pc  Qt5Positioning.pc  Qt5PositioningQuick.pc  Qt5PrintSupport.pc  Qt5Qml.pc  Qt5QmlModels.pc  Qt5QmlWorkerScript.pc  Qt5Quick.pc  Qt5QuickControls2.pc  Qt5QuickTemplates2.pc  Qt5QuickTest.pc  Qt5QuickWidgets.pc  Qt5RemoteObjects.pc  Qt5RepParser.pc  (+18 more)
Runtime/QtSDK/5.15.2/mingw81_64/include/ActiveQt/: activeqtversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DAnimation/: qt3danimationversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DCore/: qt3dcoreversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DExtras/: qt3dextrasversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DInput/: qt3dinputversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DLogic/: qt3dlogicversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DQuick/: qt3dquickversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DQuickAnimation/: qt3dquickanimationversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DQuickExtras/: qt3dquickextrasversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DQuickInput/: qt3dquickinputversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DQuickRender/: qt3dquickrenderversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DQuickScene2D/: qt3dquickscene2dversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/Qt3DRender/: QDebugOverlay  QDepthRange  QNoPicking  QRasterMode  QRenderCapabilities  QShaderImage  QSubtreeEnabler  QTextureDataUpdate  Qt3DRender  qt3drenderversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtAccessibilitySupport/: qtaccessibilitysupportversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtBluetooth/: qtbluetoothversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtCore/: qconfig.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtDBus/: qtdbusversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtDesigner/: qtdesignerversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtDesignerComponents/: qtdesignercomponentsversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtDeviceDiscoverySupport/: qtdevicediscoverysupportversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtEdidSupport/: qtedidsupportversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtEglSupport/: qteglsupportversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtEventDispatcherSupport/: qteventdispatchersupportversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtFbSupport/: qtfbsupportversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtFontDatabaseSupport/: qtfontdatabasesupportversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtGamepad/: qtgamepadversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtHelp/: QHelpFilterSettingsWidget  QHelpLink  QtHelp  qthelpversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtLocation/: qtlocationversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtMultimedia/: qtmultimediaversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtMultimediaQuick/: qtmultimediaquickversion.h
Runtime/QtSDK/5.15.2/mingw81_64/include/QtMultimediaWidgets/: qtmultimediawidgetsversion.h
Runtime/QtSDK/5.15.2/mingw81_64/lib/: Qt53DAnimation.prl  Qt53DCore.prl  Qt53DExtras.prl  Qt53DInput.prl  Qt53DLogic.prl  Qt53DQuick.prl  Qt53DQuickAnimation.prl  Qt53DQuickExtras.prl  Qt53DQuickInput.prl  Qt53DQuickRender.prl  Qt53DQuickScene2D.prl  Qt53DRender.prl  Qt5AccessibilitySupport.prl  Qt5AxBase.prl  Qt5AxContainer.prl  Qt5AxServer.prl  Qt5Bluetooth.prl  Qt5Bootstrap.prl  Qt5Concurrent.prl  Qt5Core.prl  Qt5DBus.prl  Qt5Designer.prl  Qt5DesignerComponents.prl  Qt5DeviceDiscoverySupport.prl  Qt5EdidSupport.prl  Qt5EglSupport.prl  Qt5EventDispatcherSupport.prl  Qt5FbSupport.prl  Qt5FontDatabaseSupport.prl  Qt5Gamepad.prl  Qt5Gui.prl  Qt5Help.prl  Qt5Location.prl  Qt5Multimedia.prl  Qt5MultimediaQuick.prl  Qt5MultimediaWidgets.prl  Qt5Network.prl  Qt5Nfc.prl  Qt5OpenGL.prl  Qt5OpenGLExtensions.prl  (+41 more)
Runtime/QtSDK/5.15.2/mingw81_64/mkspecs/: qmodule.pri
cmake/: WindowsQt.cmake
gui/: MainWindow.cpp  MainWindow.h  ProcessingWorker.cpp  ProcessingWorker.h
include/: CsvReader.h  ExcelConverter.h  FileScanner.h  PdfInfo.h  PdfProcessor.h  PdfReader.h  PdfWorker.h  Renamer.h  ResultWriter.h  Settings.h  Utils.h
src/: CsvReader.cpp  ExcelConverter.cpp  FileScanner.cpp  PdfProcessor.cpp  PdfReader.cpp  PdfWorker.cpp  Renamer.cpp  ResultWriter.cpp  Settings.cpp  Utils.cpp  main.cpp
windows/: CMakeLists.txt
(+321 files in other folders)
